--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,4 +7,60 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 15px;
+}
+
+.bg-inst{
+    background-color: #ab0033 !important;
+}
+
+.bg-inst2{
+    background-color: #ddc9a3 !important;
+}
+
+.bg-inst3{
+    background-color: #54565a !important;
+}
+
+.btn-inst{
+    background-color: #ab0033;
+    border-color: #ab0033;
+}
+
+.btn-inst2{
+    background-color: #bc955c;
+    border-color: #bc955c;
+}
+
+.btn:hover{
+    background-color: #bc955c !important;
+    border-color: #bc955c !important;
+}
+
+.btn-inst3{
+    background-color: #54565a;
+    border-color: #54565a;
+}
+
+.sidebar-container{
+    position: relative;
+    width: 300px;
+    height: 100vh;
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Aguila1.jpg/320px-Aguila1.jpg');
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 0;
+    background-color: #ab0033c4;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    background-color: #54565ae0;
 }
