feat(user).- Se agregan campos adicionales al DTO, se complementa index de vista de usuarios.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -108,3 +108,11 @@ body{
   .form-check-input {
     transition: background-color 2s, border-color 2s;
   }
+
+  /*
+  jQuery Validate error
+  */
+
+  label.error {
+    color: #c0392b;
+  }
