--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -72,7 +72,7 @@ body{
 .sidebar-container{
     position: relative;
     width: 300px;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Aguila1.jpg/320px-Aguila1.jpg');
     background-size: cover;
     background-position: center;
