--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,9 +11,25 @@ body {
     background: #54565a20;
 }
 
+/*
+Colores de fuentes oficiales
+*/
+
+.text-principal {
+    color: #ab0033;
+}
+
+.text-secundario {
+    color: #bc955c;
+}
+
+.bg-danger {
+    background-color: #ab003380 !important;
+}
+
 canvas {
     width: 100% !important;
-    height: 50vh !important;
+    height: 35vh !important;
 }
 
 #radarContainer,
