Feat: Agregada vista de detalle para indicadores

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -276,3 +276,8 @@ label.error {
 tbody {
     font-size: 15px !important;
 }
+
+
+        .progress-stacked {
+            height: .5rem!important;
+        }
